--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,8 +61,8 @@
             </div>
         </div>
     </header>
-    <section style ="background-color: #D86000">
-        <div class="container d-flex justify-content-center pt-5 pb-0">    
+    <section style="background-color: #D86000">
+        <div class="container d-flex justify-content-center pt-5 pb-0">
             <h1 style="color: #1d9df3; font-family: Arial; text-decoration: none;">WHAT IS A PLATYPUS?</h1>
         </div>
         <div class="container d-flex justify-content-center pt-5 pb-5 ">
@@ -85,9 +86,9 @@
                     </p>
                     <div class="collapse" id="collapseExample-1">
                         <div class="">
-                            <p class="card-text environment-text">platypus are carnivores</p>
-                            <p class="card-text environment-text border-top pt-3">they feed on annelid worms, insect larvae, freshwater shrimp, and freshwater yabby (crayfish)</p>
-                            <p class="card-text environment-text border-top pt-3">platypus eats 20% of its body weight (equivalent to a 150lb human eating 30lbs of food)</p>
+                            <p class="card-text environment-text">Platypus are carnivores</p>
+                            <p class="card-text environment-text border-top pt-3">They feed on annelid worms, insect larvae, freshwater shrimp, and freshwater yabby (crayfish)</p>
+                            <p class="card-text environment-text border-top pt-3">Platypus eats 20% of its body weight (equivalent to a 150lb human eating 30lbs of food)</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
                     </div>
@@ -103,8 +104,8 @@
                     </p>
                     <div class="collapse" id="collapseExample-2">
                         <div class="">
-                            <p class="card-text environment-text">platypus needs a constant source of water (i.e. freshwater lakes, rivers, lagoons, farm dams, and streams)</p>
-                            <p class="card-text environment-text border-top pt-3">they are considered nocturnal and are non-sociable. They tend to only gather during mating season.</p>
+                            <p class="card-text environment-text">Platypus needs a constant source of water (i.e. freshwater lakes, rivers, lagoons, farm dams, and streams)</p>
+                            <p class="card-text environment-text border-top pt-3">They are considered nocturnal and are non-sociable. They tend to only gather during mating season.</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
                     </div>
@@ -121,9 +122,9 @@
                     </p>
                     <div class="collapse" id="collapseExample-3">
                         <div class="">
-                            <p class="card-text environment-text">platypus have venomous barb. Be careful when handling them</p>
-                            <p class="card-text environment-text border-top pt-3">it’s actually ILLEGAL to own a platypus</p>
-                            <p class="card-text environment-text border-top pt-3">Those with a license to handle platypus can rescue them. After rehab platypus are released back into the wild.</p>
+                            <p class="card-text environment-text">Platypus have venomous barb. Be careful when handling them</p>
+                            <p class="card-text environment-text border-top pt-3">It’s actually ILLEGAL to own a platypus</p>
+                            <p class="card-text environment-text border-top pt-3">Those with a license to handle platypus can rescue them. After rehab platypus are released into the wild.</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
                     </div>
@@ -132,12 +133,12 @@
         </div>
     </section>
     <section style="background-color: #189090;">
-        <div class="container d-flex justify-content-center pt-5 pb-4">    
+        <div class="container d-flex justify-content-center pt-5 pb-4">
             <h1 style="color:#F09048; font-family: Arial; text-decoration: underline;">RESCUED PLATYPUS</h1>
         </div>
-        <div class="container d-flex pb-5 pt-2">                
-            <div class="row" style="justify-content: center;"> 
-                <div class="column" id="div-mobile">                
+        <div class="container d-flex pb-5 pt-2">
+            <div class="row" style="justify-content: center;">
+                <div class="column" id="div-mobile">
                     <img src="img/3.jpg" style="width:100%">
                     <img src="img/8.jpg" style="width:100%">
                     <img src="img/11.jpg" style="width:100%">
@@ -149,13 +150,13 @@
                     <img src="img/6.jpg" style="width:100%">
                     <img src="img/15.jpg" style="width:100%">
                     <img src="img/7.jpg" style="width:100%">
-                    <img src="img/10.jpg" style="width:100%">                
-                </div>  
+                    <img src="img/10.jpg" style="width:100%">
+                </div>
                 <div class="column" id="div-desktop">
                     <img src="img/1.jpg" style="width:100%">
                     <img src="img/5.jpg" style="width:100%">
                     <img src="img/9.jpg" style="width:100%">
-                    <img src="img/13.jpg" style="width:100%">                
+                    <img src="img/13.jpg" style="width:100%">
                     <img src="img/15.jpg" style="width:100%">
                 </div>
             </div>
