add period (.) the end of paragraphs

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                     </p>
                     <div class="collapse" id="collapseExample-1">
                         <div class="">
-                            <p class="card-text environment-text">Platypus are carnivores</p>
-                            <p class="card-text environment-text border-top pt-3">They feed on annelid worms, insect larvae, freshwater shrimp, and freshwater yabby (crayfish)</p>
-                            <p class="card-text environment-text border-top pt-3">Platypus eats 20% of its body weight (equivalent to a 150lb human eating 30lbs of food)</p>
+                            <p class="card-text environment-text">Platypus are carnivores.</p>
+                            <p class="card-text environment-text border-top pt-3">They feed on annelid worms, insect larvae, freshwater shrimp, and freshwater yabby (crayfish).</p>
+                            <p class="card-text environment-text border-top pt-3">Platypus eats 20% of its body weight (equivalent to a 150lb human eating 30lbs of food).</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                     </p>
                     <div class="collapse" id="collapseExample-2">
                         <div class="">
-                            <p class="card-text environment-text">Platypus needs a constant source of water (i.e. freshwater lakes, rivers, lagoons, farm dams, and streams)</p>
+                            <p class="card-text environment-text">Platypus needs a constant source of water (i.e. freshwater lakes, rivers, lagoons, farm dams, and streams).</p>
                             <p class="card-text environment-text border-top pt-3">They are considered nocturnal and are non-sociable. They tend to only gather during mating season.</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
@@ -122,8 +122,8 @@
                     </p>
                     <div class="collapse" id="collapseExample-3">
                         <div class="">
-                            <p class="card-text environment-text">Platypus have venomous barb. Be careful when handling them</p>
-                            <p class="card-text environment-text border-top pt-3">It’s actually ILLEGAL to own a platypus</p>
+                            <p class="card-text environment-text">Platypus have venomous barb. Be careful when handling them.</p>
+                            <p class="card-text environment-text border-top pt-3">It’s actually ILLEGAL to own a platypus.</p>
                             <p class="card-text environment-text border-top pt-3">Those with a license to handle platypus can rescue them. After rehab platypus are released into the wild.</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
