--- a/about-us.html
+++ b/about-us.html
@@ -59,10 +59,10 @@
                         <div class="card-body">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">PHIL</h5>
                             <p class="card-text text-info">Product Owner</p>
-                            <p class="card-text text-warning">In-charge of finding ideas for the project</p>
-                            <p class="card-text text-warning">Managing the changes to the contain and the structure of the page</p>
-                            <p class="card-text text-warning">In-charge of formating to make the page responsive</p>
-                            <p class="card-text text-warning">Working with other members to complete the Project</p>
+                            <p class="card-text text-warning">In-charge of finding ideas for the project.</p>
+                            <p class="card-text text-warning">Managing the changes to the contain and the structure of the page.</p>
+                            <p class="card-text text-warning">In-charge of formating to make the page responsive.</p>
+                            <p class="card-text text-warning">Working with other members to complete the Project.</p>
                         </div>
                     </div>
                     <div class="card bg-transparent no-border card-body-flex aboutus-page-card" style="width: 18rem; ">
@@ -70,10 +70,10 @@
                         <div class="card-body">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">ANH</h5>
                             <p class="card-text text-info">Scrum Master</p>
-                            <p class="card-text text-warning">Help organizing the whole project</p>
-                            <p class="card-text text-warning">In-charge of git, github and managing the changes for the main files</p>
-                            <p class="card-text text-warning">Helping other member on the idea and the format for the project</p>
-                            <p class="card-text text-warning">Working with other members to complete the Project</p>
+                            <p class="card-text text-warning">Help organizing the whole project.</p>
+                            <p class="card-text text-warning">In-charge of git, github and managing the changes for the main files.</p>
+                            <p class="card-text text-warning">Helping other member on the idea and the format for the project.</p>
+                            <p class="card-text text-warning">Working with other members to complete the Project.</p>
                         </div>
                     </div>
                 </div>
@@ -83,10 +83,10 @@
                         <div class="card-body ">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">LOC</h5>
                             <p class="card-text text-info ">Developer</p>
-                            <p class="card-text text-warning">Help created the structure of the page</p>
-                            <p class="card-text text-warning">Build the sections about "the environment for the platypus" and "member of the team"</p>
-                            <p class="card-text text-warning">Build the "about us" page</p>
-                            <p class="card-text text-warning">Working with other members to complete the Project</p>
+                            <p class="card-text text-warning">Help created the structure of the page.</p>
+                            <p class="card-text text-warning">Build the sections about "the environment for the platypus" and "member of the team".</p>
+                            <p class="card-text text-warning">Build the "about us" page.</p>
+                            <p class="card-text text-warning">Working with other members to complete the Project.</p>
                         </div>
                     </div>
                     <div class="card bg-transparent no-border card-body-flex aboutus-page-card" style="width: 18rem;">
@@ -94,10 +94,10 @@
                         <div class="card-body ">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">Vy</h5>
                             <p class="card-text text-info ">Developer</p>
-                            <p class="card-text text-warning">Help created the structure of the page</p>
-                            <p class="card-text text-warning">Build the sections about "what is a platypus" and "rescued platypus"</p>
-                            <p class="card-text text-warning">Contribute to formating the page and the responsive for the page</p>
-                            <p class="card-text text-warning">Working with other members to complete the Project</p>
+                            <p class="card-text text-warning">Help created the structure of the page.</p>
+                            <p class="card-text text-warning">Build the sections about "what is a platypus" and "rescued platypus".</p>
+                            <p class="card-text text-warning">Contribute to formating the page and the responsive for the page.</p>
+                            <p class="card-text text-warning">Working with other members to complete the Project.</p>
                         </div>
                     </div>
 
