add minor changes to footer responsive

--- a/about-us.html
+++ b/about-us.html
@@ -109,7 +109,7 @@
     <footer class="">
         <div class="container row">
             <a href="index.html" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo" height="85px"></a>
-            <div class="footer-links d-flex col-7">
+            <div class="footer-links d-flex col-lg-7 col-md-8 col-12">
                 <div class="list-header"><a class="font-weight-bold">Company</a>
                     <ul class="footer-list text-muted">
                         <li><a>About</a></li>
@@ -133,7 +133,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="social-media-btn col-3">
+            <div class="social-media-btn col-xl-3 col-lg-12">
                 <ul class="row">
                     <li>
                         <a href="#" class="fa fa-instagram"></a>
