--- a/index.html
+++ b/index.html
@@ -22,41 +22,52 @@
 <body>
     <nav class="bg-black fixed-top">
         <div class="container navbar-nav navbar-light navbar-expand-lg py-2 nav-flex nav-row">
-            <a href="index.html" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link nav-linkto " href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-linkto" href="about-us.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-linkto" href="#">Rescued Platypus</a>
-                    </li>
-                    <li class="nav-item res-invisible-1">
-                        <a class="nav-link nav-linkto" href="#">Help A Platypus</a>
-                    </li>
-                    <li class="nav-item res-invisible-1">
-                        <a class="nav-link nav-linkto" href="#">Search</a>
-                    </li>
-                </ul>
+            <a href="#" class="navbar-brand sm-pl"><img src="img/platypus-logo.png" alt="Startup-logo"
+                    height="45px"></a>
+            <div id="fix-hamburger">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link nav-linkto " href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-linkto" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-linkto" href="#">Rescued Platypus</a>
+                        </li>
+                        <li class="nav-item res-invisible-1">
+                            <a class="nav-link nav-linkto" href="#">Help A Platypus</a>
+                        </li>
+                        <li class="nav-item res-invisible-1">
+                            <a class="nav-link nav-linkto" href="#">Search</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <form class="form-inline res-invisible-2">
-                <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
-                <button class="mx-2 btn btn-nav my-2 my-sm-0 search-icon" type="submit"><i
-                            class="fas fa-search"></i></button>
-            </form>
+        </div>
+        <form class="form-inline res-invisible-2">
+            <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
+            <div class="d-flex justify-content-center">
+                <div class="searchbar">
+                    <input class="search-input" type="text" name="" placeholder="Search...">
+                    <a href="#" class="search-icon"><i class="fas fa-search"></i></a>
+                </div>
+            </div>
+        </form>
         </div>
     </nav>
-    <header class="">
+    <header>
         <div class="container">
             <div class="header-style">
-                <h1 class="header-title">Be a Hero! Rescue a Platypus.</h1>
-                <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br /> it's one of the few animals that can make it's own custard."</h4>
+                <h1 class="header-title">Be a Hero!<br /> Rescue a Platypus.</h1>
+                <h4 class="header-subtitle">'Why save a platypus? <br />Because the platypus both lays eggs and produces
+                    milk, <br /> it's one of
+                    the few animals that can make it's own custard.'</h4>
                 <button class="mx-2 btn btn-nav my-2 my-sm-0" id="header-button" type="submit">MORE INFO</button>
             </div>
         </div>
